# SignFlow

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  tasks.py
src/sign_flow/: __init__.py  skeleton_extractor.py  video_processor.py
src/sign_flow/config/: __init__.py  settings.py
tests/: __init__.py
