[project]
name = "signflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "invoke>=2.2.0",
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pydocstyle>=6.3.0",
    "pylint>=3.3.7",
    "pytest>=8.4.0",
    "ruff[format]>=0.11.13",
]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
target-version = "py311"
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"

[tool.pylint]
max-line-length = 79
disable = ["C0111", "C0103"]

[tool.flake8]
ignore = ["E501"]
max-line-length = 79
